# shader-validator

./: .gitignore  .vscode-test.js  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md  webpack.config.js
.github/ISSUE_TEMPLATE/: issue-submitting-guideline.md  issue_template.yml
.github/workflows/: build.yml  deploy.yml  extension-build.yml  extension.yml  predeploy.yml
shader-language-server/: Cargo.toml  README.md
shader-language-server/src/: common.rs  dxc.rs  glsl.rs  glslang.rs  hlsl.rs  lib.rs  main.rs  naga.rs  server.rs  shader_error.rs
src/: client.ts  entry-point.ts  extension.ts  formatter.ts  linter.ts  request.ts  rpc.ts  shaderVariant.ts  sidebar.ts  validator.ts  validatorChildProcess.ts  validatorWasi.ts
src/lang/: hlsl.ts  lang.ts
src/provider/: completion.ts  definition.ts  hover.ts  symbol.ts
src/test/: runTest.ts
src/test/suite/: binary.test.ts  completion.test.ts  diagnostic.test.ts  extension.test.ts  index.ts  utils.ts  version.test.ts
src/view/: shaderStatusBar.ts  shaderVariantTreeView.ts
syntaxes/: glsl.tmLanguage.json  hlsl.tmLanguage.json  wgsl.tmLanguage.json
test/: test.frag.glsl  test.hlsl  test.wgsl
