[package]
name = "shader_language_server"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
jsonrpc-core = "18.0.0"
#hassle-rs = "0.11.0" # cannot load dll in wasi...
naga = { version = "0.12.2", features = ["wgsl-in", "validate", "span"] }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"
