[package]
name = "shader_language_server"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
glslang = "0.3.2"
jsonrpc-core = "18.0.0"
# cannot load DXC dll in wasi
# There is an issue to compile DXC statically:
# https://github.com/Traverse-Research/hassle-rs/issues/57
#hassle-rs = "0.11.0"
naga = { version = "0.12.2", features = ["wgsl-in", "validate", "span"] }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"

[patch.crates-io]
glslang = { git = "https://github.com/antaalt/glslang-rs.git", branch = "add-shader-messages" }